materialize template + custom setup

--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
         <title>Simple Web with Materialize</title>
         <!-- Materialize CSS -->
         <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" rel="stylesheet">
+        <!-- Custom CSS -->
+        <link rel="stylesheet" href="css/styles.css">
         
     </head>
     <body>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+        <!-- Custom JavaScript -->
+        <script src="js/scripts.js"></script>
     </body>
 </html>
