--- a/register.html
+++ b/register.html
@@ -41,7 +41,7 @@
                 <!-- Avatar Upload Section -->
                 <div class="row center-align">
                     <div class="file-field input-field">
-                        <div class="btn grey darken-1">
+                        <div class="btn blue darken-1">
                             <span>Upload Avatar</span>
                             <input type="file" accept="image/*">
                         </div>
@@ -53,10 +53,15 @@
 
                 <!-- Buttons -->
                 <div class="row center-align">
-                    <button class="btn grey darken-1 waves-effect waves-light" type="submit">Register</button>
-                    <button class="btn grey lighten-1 waves-effect waves-light" type="button" onclick="window.history.back()">Back</button>
+                    <button class="btn green darken-1 waves-effect waves-light" type="submit">Register</button>
+                    <button class="btn orange lighten-1 waves-effect waves-light" type="button" onclick="window.history.back()">Back</button>
                 </div>
             </form>
+            <div class="divider"></div>
+
+            <div class="center-align">
+                <a href="login.html" class="btn purple darken-1 waves-effect waves-light">Already have Account</a>
+            </div>
         </div>
     </div>
 
