--- a/login.html
+++ b/login.html
@@ -31,7 +31,7 @@
                     </div>
                     <div class="row">
                         <div class="col s12 center-align">
-                            <button class="btn grey darken-1 waves-effect waves-light" type="submit">Log In</button>
+                            <button class="btn green darken-1 waves-effect waves-light" type="submit">Log In</button>
                         </div>
                     </div>
                 </form>
@@ -41,7 +41,7 @@
 
             <div class="center-align">
                 <p><strong>Forgotten Password</strong> <span class="small-text">to get Support</span></p>
-                <a href="register.html" class="btn grey darken-1 waves-effect waves-light">Create New Account</a>
+                <a href="register.html" class="btn purple darken-1 waves-effect waves-light">Create New Account</a>
             </div>
         </div>
     </div>
