create account logics

--- a/register.html
+++ b/register.html
@@ -14,26 +14,26 @@
         <div class="card-panel">
             <h4 class="center-align">Register</h4>
 
-            <form>
+            <form id="registerForm">
                 <div class="row">
                     <div class="input-field col s12">
-                        <input id="first_name" type="text" class="validate">
+                        <input id="first_name" type="text" class="validate" required>
                         <label for="first_name">First Name:</label>
                     </div>
                     <div class="input-field col s12">
-                        <input id="last_name" type="text" class="validate">
+                        <input id="last_name" type="text" class="validate" required>
                         <label for="last_name">Last Name:</label>
                     </div>
                     <div class="input-field col s12">
-                        <input id="email" type="email" class="validate">
+                        <input id="email" type="email" class="validate" required>
                         <label for="email">Email:</label>
                     </div>
                     <div class="input-field col s12">
-                        <input id="password" type="password" class="validate">
+                        <input id="password" type="password" class="validate" required>
                         <label for="password">Password:</label>
                     </div>
                     <div class="input-field col s12">
-                        <input id="confirm_password" type="password" class="validate">
+                        <input id="confirm_password" type="password" class="validate" required>
                         <label for="confirm_password">Confirm Password:</label>
                     </div>
                 </div>
@@ -65,7 +65,72 @@
         </div>
     </div>
 
+    <!-- Modal Structure -->
+    <div id="responseModal" class="modal">
+        <div class="modal-content">
+            <h4 id="modalTitle">Response</h4>
+            <p id="modalMessage"></p>
+        </div>
+        <div class="modal-footer">
+            <button class="modal-close waves-effect waves-green btn-flat">OK</button>
+        </div>
+    </div>
+
     <!-- Materialize JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const modal = M.Modal.init(document.querySelector('#responseModal'));
+
+            document.getElementById('registerForm').addEventListener('submit', async function (e) {
+                e.preventDefault();
+
+                const firstName = document.getElementById('first_name').value;
+                const lastName = document.getElementById('last_name').value;
+                const email = document.getElementById('email').value;
+                const password = document.getElementById('password').value;
+                const confirmPassword = document.getElementById('confirm_password').value;
+
+                if (password !== confirmPassword) {
+                    document.getElementById('modalTitle').innerText = 'Error';
+                    document.getElementById('modalMessage').innerText = 'Passwords do not match.';
+                    modal.open();
+                    return;
+                }
+
+                const requestData = {
+                    name: `${firstName} ${lastName}`,
+                    email: email,
+                    password: password
+                };
+
+                try {
+                    const response = await fetch('https://p-e-t-app-1c6ad807cc55.herokuapp.com/api/auth/register', {
+                        method: 'POST',
+                        headers: { 'Content-Type': 'application/json' },
+                        body: JSON.stringify(requestData)
+                    });
+
+                    const result = await response.json();
+                    if (response.ok) {
+                        document.getElementById('modalTitle').innerText = 'Success';
+                        document.getElementById('modalMessage').innerText = 'Registration successful! Redirecting to login...';
+                        modal.open();
+                        setTimeout(() => {
+                            window.location.href = 'login.html';
+                        }, 2000);
+                    } else {
+                        document.getElementById('modalTitle').innerText = 'Error';
+                        document.getElementById('modalMessage').innerText = result.message || 'An error occurred.';
+                        modal.open();
+                    }
+                } catch (error) {
+                    document.getElementById('modalTitle').innerText = 'Error';
+                    document.getElementById('modalMessage').innerText = 'Network error. Please try again.';
+                    modal.open();
+                }
+            });
+        });
+    </script>
 </body>
 </html>
