--- a/register.html
+++ b/register.html
@@ -78,12 +78,13 @@
 
     <!-- Materialize JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="js/auth.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             const modal = M.Modal.init(document.querySelector('#responseModal'));
 
-            document.getElementById('registerForm').addEventListener('submit', async function (e) {
-                e.preventDefault();
+            async function handleRegisterFormSubmit(event) {
+                event.preventDefault();
 
                 const firstName = document.getElementById('first_name').value;
                 const lastName = document.getElementById('last_name').value;
@@ -92,44 +93,35 @@
                 const confirmPassword = document.getElementById('confirm_password').value;
 
                 if (password !== confirmPassword) {
-                    document.getElementById('modalTitle').innerText = 'Error';
-                    document.getElementById('modalMessage').innerText = 'Passwords do not match.';
-                    modal.open();
+                    showModal('Error', 'Passwords do not match.');
                     return;
                 }
 
                 const requestData = {
                     name: `${firstName} ${lastName}`,
                     email: email,
-                    password: password
+                    password: password,
                 };
 
-                try {
-                    const response = await fetch('https://p-e-t-app-1c6ad807cc55.herokuapp.com/api/auth/register', {
-                        method: 'POST',
-                        headers: { 'Content-Type': 'application/json' },
-                        body: JSON.stringify(requestData)
-                    });
+                const response = await registerUser(requestData);
 
-                    const result = await response.json();
-                    if (response.ok) {
-                        document.getElementById('modalTitle').innerText = 'Success';
-                        document.getElementById('modalMessage').innerText = 'Registration successful! Redirecting to login...';
-                        modal.open();
-                        setTimeout(() => {
-                            window.location.href = 'login.html';
-                        }, 2000);
-                    } else {
-                        document.getElementById('modalTitle').innerText = 'Error';
-                        document.getElementById('modalMessage').innerText = result.message || 'An error occurred.';
-                        modal.open();
-                    }
-                } catch (error) {
-                    document.getElementById('modalTitle').innerText = 'Error';
-                    document.getElementById('modalMessage').innerText = 'Network error. Please try again.';
-                    modal.open();
+                if (response.success) {
+                    showModal('Success', response.message);
+                    setTimeout(() => {
+                        window.location.href = `login.html`;
+                    }, 2000);
+                } else {
+                    showModal('Error', response.message);
                 }
-            });
+            }
+
+            function showModal(title, message) {
+                document.getElementById('modalTitle').innerText = title;
+                document.getElementById('modalMessage').innerText = message;
+                modal.open();
+            }
+
+            document.getElementById('registerForm').addEventListener('submit', handleRegisterFormSubmit);
         });
     </script>
 </body>
