--- a/open.html
+++ b/open.html
@@ -31,8 +31,8 @@
             <!-- Buttons Section -->
             <div class="row">
                 <div class="col s12">
-                    <a href="register.html" class="btn green darken-1 waves-effect waves-light">Join</a>
-                    <a href="more-info.html" class="btn purple darken-2 waves-effect waves-light">Get More Information</a>
+                    <a href="register.html" class="btn grey darken-1 waves-effect waves-light">Join</a>
+                    <a href="more-info.html" class="btn grey darken-2 waves-effect waves-light">Get More Information</a>
                 </div>
             </div>
         </div>
@@ -40,14 +40,5 @@
 
     <!-- Materialize JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script>
-        document.addEventListener('DOMContentLoaded', async function () {
-            const token = localStorage.getItem('authToken');
-            if (token) {
-                window.location.href = `dashboard.html`;
-                // return;
-            }
-        });
-    </script>
 </body>
 </html>
